--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,23 @@ jobs:
         with:
           name: Depcheck report
           path: ${{github.workspace}}/reports 
+          
+  Deploy:
+    name: Deploy
+    needs: [OWASP_Dependency_Check, sonarcloud]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy
+        run: echo 'Deploy'  
+        
+  ZAP_Scan:
+    needs: Deploy
+    name: ZAP Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: ZAP Scan
+        uses: zaproxy/action-baseline@v0.5.0
+        with:
+          target: http://51.79.64.178/  
+          
+          
